objects/Participant_Game_Info__c.object
<CustomObject>
    <description>This object is having details of the participant&apos;s game.</description>
    <fields>
        <fullName>Age_Difference__c</fullName>
        <label>Age Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aging_Well_Any_loud_noices_recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any loud noices recorded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aging_Well_Anyone_elses_voice_recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anyone elses voice recorded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aging_Well_Used_languages_other_than_Eng__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used languages other than English?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aging_Well_Would_you_like_to_delete_reco__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would you like to delete recording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Browser_User_Agent__c</fullName>
        <description>Browser at which test was conducted.(eg: chrome, Firefox)</description>
        <label>Browser User Agent</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to contact, saving contact id, will show contact name at front-end.</description>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participant Game Infos</relationshipLabel>
        <relationshipName>Participant_Game_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Of_No_Of_Correct_Answered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Of No Of Correct Answered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Of_No_of_Question_Attempted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Of No of Question Attempted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Of_Number_of_attempts_for_STACKS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Of Number of attempts for STACKS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Of_Total_Reaction_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Of Total Reaction Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Of_Total_correct_for_Round_0__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Of Total correct for Round 0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Of_Total_correct_for_Round_10__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Of Total correct for Round 10</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Of_Total_correct_for_Round_11__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Of Total correct for Round 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Screen_Size__c</fullName>
        <label>Device Screen Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>End date and time of game for the particular contact. It is calculated of the basis of (Start Date Time + Game Activation Duration.)</description>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Episodic_memory_Any_loud_noices_recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any loud noices recorded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Episodic_memory_Anyone_elses_voices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anyone elses voice recorded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Episodic_memory_Used_languges_other_than__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used languages other than English?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Episodic_memory_Would_you_like_to_delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Would you like to delete recording</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fake_News_Area_Type_Lives__c</fullName>
        <label>Area Type Lives</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Urban</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>I prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fake_News_Ball_Cost_in_Cents__c</fullName>
        <description>How much does the ball cost? (Answer in cents)</description>
        <label>Age Of Adam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fake_News_Days_to_Cover_Half_Lake__c</fullName>
        <label>Days to Cover Bread</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fake_News_Political_Orientation__c</fullName>
        <label>Political Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extremely Liberal</fullName>
                </value>
                <value>
                    <fullName>Liberal</fullName>
                </value>
                <value>
                    <fullName>Moderate Liberal</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Moderate Conservative</fullName>
                </value>
                <value>
                    <fullName>Conservative</fullName>
                </value>
                <value>
                    <fullName>Extremely Conservative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fake_News_Social_Media_Engagement__c</fullName>
        <label>Social Media Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
                <value>
                    <fullName>Rarely</fullName>
                </value>
                <value>
                    <fullName>Sometimes</fullName>
                </value>
                <value>
                    <fullName>Very often</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fake_News_Spending_Hours_for_News_Week__c</fullName>
        <label>Spending Hours for News/Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fake_News_Supporting_Political_Allaince__c</fullName>
        <label>Supporting Political Alliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Democratic party</fullName>
                </value>
                <value>
                    <fullName>Republican party</fullName>
                </value>
                <value>
                    <fullName>I prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fake_News_Time_to_Make_100_Widgets__c</fullName>
        <label>Time to Print Pages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fake_News_Trust_in_Federal_Government__c</fullName>
        <label>Trust in Federal Government</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agree</fullName>
                </value>
                <value>
                    <fullName>Disagree</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Strongly Agree</fullName>
                </value>
                <value>
                    <fullName>Strongly Disagree</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Federal_Gov_TrustFeelings__c</fullName>
        <label>Federal Gov Trust Feelings</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Game_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to game, saving game id, will show game name at front-end.</description>
        <label>Game Name</label>
        <referenceTo>Game_Detail__c</referenceTo>
        <relationshipLabel>Participant Game Infos</relationshipLabel>
        <relationshipName>Participant_Game_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Game_Play_Status__c</fullName>
        <label>Game Play Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not-Completed</fullName>
                    <default>true</default>
                    <label>Not-Completed</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Game_Version__c</fullName>
        <label>Game Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>8</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Data__c</fullName>
        <label>IP Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Loud_Noises_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Loud Noises Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Non_English_Usage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Non English Usage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Other_Voices_Recorded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Other Voices Recorded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Recording_Usage_Consent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Recording Usage Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>test language get from consent page. ( Language selected by test-taker at public application.)</description>
        <label>Language</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Step__c</fullName>
        <label>Last Step</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Living_Location__c</fullName>
        <label>Living Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mic_Id__c</fullName>
        <label>Mic Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mic_Label__c</fullName>
        <label>Mic Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mold_Spread_Days__c</fullName>
        <label>Mold Spread Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>News_Consumption_hrs_wk__c</fullName>
        <label>News Consumption (hrs/wk)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Correct_Answered__c</fullName>
        <description>Count the correct answers were responded by the participant</description>
        <label>No. Of Correct Answered</label>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Is_Correct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Is_Practice_Question__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Participant_Game_Response__c.Participant_Game_InfoID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Question_Attempted__c</fullName>
        <description>Count of question from participant responses.</description>
        <label>No. of Question Attempted</label>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Is_Practice_Question__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Participant_Game_Response__c.Participant_Game_InfoID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_attempts_for_STACKS__c</fullName>
        <label>Number of attempts for STACKS</label>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Round__c</field>
            <operation>equals</operation>
            <value>STACKS</value>
        </summaryFilterItems>
        <summaryForeignKey>Participant_Game_Response__c.Participant_Game_InfoID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Political_Affiliation__c</fullName>
        <label>Political Affiliation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Political_Orientation__c</fullName>
        <label>Political Orientation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printing_Time_Pages__c</fullName>
        <label>Printing Time Pages</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReactionTime__c</fullName>
        <formula>Count_Of_Total_Reaction_Time__c / Count_Of_No_of_Question_Attempted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReactionTime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social_Media_Engagement__c</fullName>
        <label>Social Media Engagement</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speech_Task_1_Recording__c</fullName>
        <label>Speech Task 1 Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Speech_Task_2_Recording__c</fullName>
        <label>Speech Task 2 Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>Start date and time of game for the particular contact. Automatically capture current date time at the start of game.</description>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_With_MC__c</fullName>
        <formula>Contact_Name__r.Sync_With_MC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sync With MC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tell_Me_More_Recording_File_Link__c</fullName>
        <label>Tell Me More Recording File Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tell_Me_Recording_File_Link__c</fullName>
        <label>Tell Me Recording File Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Test_Session__c</fullName>
        <label>Test Session</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Zone_Offset__c</fullName>
        <description>time(Allows users to enter a local time.)</description>
        <label>Time Zone Offset</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_KeyStrokes_In_Round_0__c</fullName>
        <label>Total KeyStrokes In Round 0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_KeyStrokes_In_Round_1__c</fullName>
        <label>Total KeyStrokes In Round 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_KeyStrokes_In_Round_2__c</fullName>
        <label>Total KeyStrokes In Round 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Reaction_Time__c</fullName>
        <description>This field represents, the total time taken by the participant.</description>
        <label>Total Reaction Time</label>
        <summarizedField>Participant_Game_Response__c.Reaction_Time_in_ms__c</summarizedField>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Is_Practice_Question__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Participant_Game_Response__c.Participant_Game_InfoID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Time_for_Round_0__c</fullName>
        <label>Total Time for Round 0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_for_Round_1__c</fullName>
        <label>Total Time for Round 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_for_Round_2__c</fullName>
        <label>Total Time for Round 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Time_for_STACKS__c</fullName>
        <label>Total Time for STACKS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_correct_for_Round_0__c</fullName>
        <label>Total correct for Round 0</label>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Round__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Is_Correct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Participant_Game_Response__c.Participant_Game_InfoID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_correct_for_Round_10__c</fullName>
        <label>Total correct for Round 10</label>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Is_Correct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Round__c</field>
            <operation>equals</operation>
            <value>10</value>
        </summaryFilterItems>
        <summaryForeignKey>Participant_Game_Response__c.Participant_Game_InfoID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_correct_for_Round_11__c</fullName>
        <label>Total correct for Round 11</label>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Round__c</field>
            <operation>equals</operation>
            <value>11</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Participant_Game_Response__c.Is_Correct__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Participant_Game_Response__c.Participant_Game_InfoID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Device__c</fullName>
        <description>Device at which test was conducted.(e.g. Desktop, iPad, iPhone, Android.)</description>
        <label>User Device</label>
        <length>56</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>participantFeatureImageURL__c</fullName>
        <label>participantFeatureImageURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Participant Game Info</label>
    <nameField>
        <displayFormat>PGI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participant Game Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>